remove MaxPermSize from the SbtRunConfiguration default as it's obsolete since Java 1.8